--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ html{
 #slide{
     margin-top: 46px;
     padding-top: 50%;
-    background: url(/assets/img/img_la.jpg);
+    background: url(./assets/img/img_la.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
