--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ html{
 #slide{
     margin-top: 46px;
     padding-top: 50%;
-    background: url(./assets/img/img_la.jpg);
+    background: url(https://www.w3schools.com/w3css/img_la.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -98,4 +98,32 @@ html{
 .text-content p{
     font-weight: 400;
     font-size: 18px;
+}
+#content .content-section{
+    padding: 64px 16px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+#content .content-section .section-heading{
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    letter-spacing: 4px;
+    margin: 10px 0;
+    font-size: 30px;
+}
+#content .content-section .section-sub-heading{
+    text-align: center;
+    margin: 15px;
+    font-size: 15px;
+    font-style: italic;
+    opacity: 0.6;
+}
+#content .content-section .about-text{
+    font-size: 15px;
+    margin: 15px 0;
+    line-height: 22.5px;
+    text-align: justify;
 }
