--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ html{
     padding: 64px 16px;
 }
 #content .content-section{
-    padding: 64px 16px 0;
+    padding: 10px 0;
     
 }
 #content .content-section .section-heading{
