--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
 }
 html{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+.member-list{
+    padding: 32px 0 32px 0;
 }
 #header{
     width: 100%;
@@ -105,11 +108,10 @@ html{
     margin-right: auto;
     padding: 64px 16px;
 }
-#content .content-section{
+.content-section{
     padding: 10px 0;
-    
 }
-#content .content-section .section-heading{
+.section-heading{
     text-align: center;
     text-transform: uppercase;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -118,7 +120,7 @@ html{
     margin: 10px 0;
     font-size: 30px;
 }
-#content .content-section .section-sub-heading{
+.section-sub-heading{
     text-align: center;
     margin: 15px;
     font-size: 15px;
@@ -131,19 +133,23 @@ html{
     line-height: 22.5px;
     text-align: justify;
 }
-.member-list{
-    padding: 32px 0;
-}
+
 .member-items{
-    float: left;
-    width: calc(100%/3);
+    padding: 32px 0;
     text-align: center;
+    display: flex;
 }
-.member-items .member-name{
+.member-item{
+    list-style: none;
+    width: calc(100%/3);
+    display: inline-block;
+}
+.member-item .name{
     margin: 15px 0;
+    font-size: 15px;
 }
-.member-items-img{
+.member-item .item-img{
+    margin: 0 0 16px;
     width: 60%;
-    margin: 0 0 80px;
     border-radius: 10px;
 }
