--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ html{
 }
 .section-sub-heading{
     text-align: center;
-    margin: 15px;
+    margin: 15px 0;
     font-size: 15px;
     font-style: italic;
     opacity: 0.6;
