--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,3 +153,38 @@ html{
     width: 60%;
     border-radius: 10px;
 }
+.tourdates{
+    width: 100%;
+    background-color: black;
+}
+.tickets{
+    border: 1px;
+}
+.tourdates #content .content-section .section-heading,
+.tourdates #content .content-section .section-sub-heading
+{
+    color: white;
+}
+.tickets .ticket{
+    list-style: none;
+    padding: 8px 16px;
+    font-size: 15px;
+    line-height: 22.5px;
+    color: #757575;
+    border-bottom: 1px solid #ddd;
+    background-color: white;
+}
+.ticket .spanleft{
+    background-color: red;
+    color: white;
+    padding: 0 8px;
+    margin: 0 16px;
+}
+.ticket #spanright{
+    float: right;
+    background-color: black;
+    border-radius: 50%;
+    color: white;
+    padding: 0 8px;
+    margin: 0 16px 0 0;
+}
