--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 html{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
 }
 .member-list{
     padding: 32px 0 32px 0;
@@ -187,4 +188,42 @@ html{
     color: white;
     padding: 0 8px;
     margin: 0 16px 0 0;
+}
+.buytickets{
+    padding: 32px 0;
+    display: flex;
+}
+.locations{
+    background-color: white;
+    margin: 0 8px;
+    float: left;
+}
+.locations img{
+    width: 100%;
+}
+.location{
+    padding: 0 16px;
+}
+.locations h3{
+    padding: 15px 0;
+    width: 300;
+}
+.locations .date,
+.locations .sub-date{
+    padding-bottom: 15px;
+}
+.locations .date{
+    opacity: 0.6;
+}
+.locations section{
+    display: inline-block;
+    color: white;
+    background-color: black;
+    padding: 8px 16px;
+    margin: 0 0 16px 0;
+}
+.locations section:hover{
+    background-color: #ccc;
+    color: black;
+    cursor: pointer;
 }
