--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,7 @@ html{
 }
 .buytickets{
     padding: 32px 0;
+    margin: 0 -8px;
     display: flex;
 }
 .locations{
@@ -198,8 +199,23 @@ html{
     margin: 0 8px;
     float: left;
 }
-.locations img{
+.img-ticket{
+    position: relative;
+}
+.img-ticket img{
     width: 100%;
+}
+.img-ticket .box{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: none;
+    background-color: black;
+    opacity: 0.4;
+    position: absolute;
+}
+.img-ticket:hover .box{
+    display: block;
 }
 .location{
     padding: 0 16px;
