--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,18 +264,18 @@ html{
     right: 0;
     left: 0;
     background: rgba(0,0,0,0.4);
-    display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1;
+    display: flex;
 }
 .modal-container{
     background-color: white;
-    width: 900px;
+    width: 70%;
     min-height: 200px;
 }
 .modal-header{
-    width: 900px;
+    width: 100%;
     min-height: 130px;
     background-color: rgb(0,150,136);
     display: flex;
@@ -313,8 +313,42 @@ html{
     padding: 0 16px 16px 16px;
 }
 .modal-lable{
+    display: flex;
+    font-size: 15px;
+    margin: 15px 0;
+    align-items: center;
+}
+.modal-lable i{
+    padding: 0 2px 0 0;
+}
+.modal-body input{
+    padding: 8px;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgb(204, 204, 204);
     display: inline;
 }
-.modal-body .modal-footer{
-    margin: 15px 0;
+.modal-body .modal-pay{
+    margin: 16px 0;
+    cursor: pointer;
+    font-size: 15px;
+    padding: 16px;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    background-color: rgb(0,150,136);
+}
+.modal-body .modal-pay:hover{
+    background-color: rgb(204, 204, 204);
+    color: black;
+}
+.modal-body .modal-pay i{
+    margin: 0 0 0 5px;
+}
+.modal-footer{
+    padding: 15px 0;
+    text-align: right;
+}
+.modal-footer a{
+    color: #2196f3;
 }
