--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,18 +245,87 @@ html{
 }
 
 .row{
-
+    padding: 32px 0;
+    display: flex;
 }
-.col{
-
+.row .row-left{
+    width: 50%;
+    margin: 0 0 16px 0;
 }
-.col-left{
-
+.row .row-left li{
+    list-style: none;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
 }
-.col-right{
-
+.row .row-left li i{
+    margin: 0 15px 0 0;
+    width: 18px;
 }
-
+.row .row-right{
+    width: 50%;
+}
+.row .row-right ul{
+    display: flex;
+    margin: 0 -8px 8px;
+    justify-content: space-between;
+}
+.row .row-right ul li{
+    padding: 0 8px;
+    width: 100%;
+    list-style: none;
+}
+.row .row-right ul li input{
+    font-style: 15px;
+    padding: 8px;
+    height: 40px;
+    width: 100%;
+    border: 1px solid rgb(204,204,204);
+}
+.row-right > input{
+    width: 100%;
+    font-style: 15px;
+    padding: 8px;
+    height: 40px;
+    border: 1px solid rgb(204,204,204);
+}
+.row-right section{
+    top: 100%;
+    text-align: right;
+    margin-top: 32px;
+    margin-bottom: 16px;
+}
+.row-right section a{
+    color: white;
+    text-transform: uppercase;
+    background-color: black;
+    text-decoration: none;
+    padding: 8px 16px;
+}
+.row-right section a:hover{
+    background-color: #ccc;
+    color: black;
+}
+.map img{
+    width: 100%;
+    height: 50%;
+    bottom: 0;
+    opacity: 0.8;
+}
+.end .content-section{
+    text-align: center;
+    opacity: 0.6;
+}
+.end .content-section i{
+    font-size: 23px;
+}
+.end .content-section p{
+    margin: 15px 0;
+}
+.end .content-section p a{
+    color: black;
+}
 .modal{
     position: fixed;
     top: 0;
@@ -267,11 +336,13 @@ html{
     justify-content: center;
     align-items: center;
     z-index: 1;
-    display: flex;
+    display: none;
 }
 .modal-container{
     background-color: white;
-    width: 70%;
+    position: absolute;
+    top: 15%;
+    width: 65%;
     min-height: 200px;
 }
 .modal-header{
