--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,12 +338,16 @@ html{
     z-index: 1;
     display: none;
 }
+.modal.open{
+    display: flex;
+}
 .modal-container{
     background-color: white;
     position: absolute;
     top: 15%;
     width: 65%;
     min-height: 200px;
+    animation: modalFadeIn ease .5s;
 }
 .modal-header{
     width: 100%;
@@ -422,4 +426,16 @@ html{
 }
 .modal-footer a{
     color: #2196f3;
+}
+
+
+@keyframes modalFadeIn{
+    from{
+        opacity: 0.6;
+        transform: translateY(-300px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
